--- a/docs/notebooks/Autre/Exercices/Exercice_pratique.ipynb
+++ b/docs/notebooks/Autre/Exercices/Exercice_pratique.ipynb
@@ -19,7 +19,7 @@
     "def verifie(tab:list)->bool:\n",
     "    '''\n",
     "    • Définition :\n",
-    "    - Prend un tableau et vérifie si ce dernier est trié (True) ou non (False)\n",
+    "    - Prend en paramètre un tableau et vérifie si ce dernier est trié (True) ou non (False)\n",
     "    • Précondition :\n",
     "    - tab : un tableau de valeurs numériques non vide\n",
     "    • Postcondition :\n",
@@ -89,7 +89,7 @@
     "def indices_maxi(tab:list)->tuple:\n",
     "    '''\n",
     "    • Définition :\n",
-    "    - Prend un tableau en entrée et renvoie un tuple de l'élément maxi présent dans tab ainsi que les indices auxquels il apparait\n",
+    "    - Prend en paramètre un tableau en entrée et renvoie un tuple de l'élément maxi présent dans tab ainsi que les indices auxquels il apparait\n",
     "    • Précondition :\n",
     "    - tab : une liste tab non vide de nombres entiers\n",
     "    • Postcondition :\n",
@@ -152,7 +152,7 @@
     "def moyenne(liste:list)->float:\n",
     "    '''\n",
     "    • Définition :\n",
-    "    - Prend une liste de tuples, en additionne les valeurs puis les divises par le total des coefficient pour en renvoyer la moyenne\n",
+    "    - Prend en paramètre une liste de tuples, en additionne les valeurs puis les divises par le total des coefficient pour en renvoyer la moyenne\n",
     "    • Précondition :\n",
     "    - liste : une liste non vide de tuples à deux éléments de la forme (valeur, coefficient) où valeur et coefficient sont des nombres positifs ou nuls\n",
     "    • Postcondition :\n",
@@ -241,7 +241,7 @@
     "def a_doublon(liste:list)->bool:\n",
     "    '''\n",
     "    • Définition :\n",
-    "    - Prend en entrée une liste et vérifie si cette dernière possède deux éléments identiques (True) ou non (False)\n",
+    "    - Prend en paramètre une liste et vérifie si cette dernière possède deux éléments identiques (True) ou non (False)\n",
     "    • Précondition :\n",
     "    - liste : une liste triée de nombres\n",
     "    • Postcondition :\n",
@@ -326,7 +326,7 @@
     "def lancer(n:int)->list:\n",
     "    '''\n",
     "    • Définition :\n",
-    "    - Prend un entier correspondant au nombre de fois ou on lance un dé, renvoie ensuite une liste regrouppant les résultats des lancés (compris entre 1 et 6)\n",
+    "    - Prend en paramètre un entier correspondant au nombre de fois ou on lance un dé, renvoie ensuite une liste regrouppant les résultats des lancés (compris entre 1 et 6)\n",
     "    • Précondition :\n",
     "    - n : un entier positif\n",
     "    • Postcondition :\n",
@@ -343,10 +343,11 @@
     "        resultat.append(randint(1, 6))\n",
     "    return resultat\n",
     "\n",
+    "\n",
     "def paire_6(tab:list)->bool:\n",
     "    '''\n",
     "    • Définition :\n",
-    "    - Prend en entrée une liste dont les éléménts sont compris entre 1 et 6 puis renvoie si elle contient plus d'un 6 (True) ou non (False)\n",
+    "    - Prend en paramètre une liste dont les éléménts sont compris entre 1 et 6 puis renvoie si elle contient plus d'un 6 (True) ou non (False)\n",
     "    • Précondition :\n",
     "    - tab : un tableau de type list de n entiers entre 1 et 6\n",
     "    • Postcondition :\n",
@@ -433,7 +434,7 @@
     "def recherche(tab:list, n:int)->int:\n",
     "    '''\n",
     "    • Définition :\n",
-    "    - Prend en entrée un tableau et vérifie si il contient l'élémént n (True) ou non (False)\n",
+    "    - Prend en paramètre un tableau et vérifie si il contient l'élémént n (True) ou non (False)\n",
     "    • Préconditions :\n",
     "    - tab : un tableau non vide de type list\n",
     "    - n : un entier\n",
@@ -505,7 +506,7 @@
     "def fusion(tab1:list, tab2:list)->list:\n",
     "    '''\n",
     "    • Définition :\n",
-    "    - Prend en entrée deux tableaux puis les combine et les tries\n",
+    "    - Prend en paramètre deux tableaux puis les combine et les tries\n",
     "    • Préconditions :\n",
     "    - tab1 : un tableau non vide de type list\n",
     "    - tab2 : un second tableau non vide de type list\n",
@@ -569,7 +570,7 @@
     "def max_dico(dico:dict)->tuple:\n",
     "    '''\n",
     "    • Définition :\n",
-    "    - Prend en entrée un dictionnaire d'utilisateurs avec leur nombre de like et renvoie un tuple de l'utilisateur ayant le maxiumum de like\n",
+    "    - Prend en paramètre un dictionnaire d'utilisateurs avec leur nombre de like et renvoie un tuple de l'utilisateur ayant le maxiumum de like\n",
     "    • Précondition :\n",
     "    - dico : un dictionnaire non vide dont les clés sont des chaînes de caractères et les valeurs associées sont des entiers positifs ou nuls\n",
     "    • Postcondition :\n",
@@ -654,7 +655,7 @@
     "def multiplication(n1:int, n2:int)->int:\n",
     "    '''\n",
     "    • Définition :\n",
-    "    - Prend en entrée deux nombres entiers n1 et n2 et les multiplie sans \"*\"\n",
+    "    - Prend en paramètre deux nombres entiers n1 et n2 et les multiplie sans \"*\"\n",
     "    • Préconditions :\n",
     "    - n1 : un nombre entier relatif\n",
     "    - n2 : un second nombre entier relatif\n",
@@ -720,7 +721,7 @@
     "def maxliste(tab:list)->int:\n",
     "    '''\n",
     "    • Définition :\n",
-    "    - Prend en entrée une liste et en renvoie son élément maximum\n",
+    "    - Prend en paramètre une liste et en renvoie son élément maximum\n",
     "    • Précondition :\n",
     "    - tab : un tableau non vide de nombres de type list\n",
     "    • Postcondition :\n",
@@ -750,7 +751,7 @@
     "def maxliste(tab:list)->int:\n",
     "    '''\n",
     "    • Définition :\n",
-    "    - Prend en entrée une liste et en renvoie son élément maximum par compréhension\n",
+    "    - Prend en paramètre une liste et en renvoie son élément maximum par compréhension\n",
     "    • Précondition :\n",
     "    - tab : un tableau non vide de nombres de type list\n",
     "    • Postcondition :\n",
@@ -833,7 +834,7 @@
     "def convertir(tab:list)->int:\n",
     "    '''\n",
     "    • Définition :\n",
-    "    - Prend en entrée un tableau d'entiers dont les éléments sont 0 ou 1 et renvoie l'écriture décimale de cet entier positif\n",
+    "    - Prend en paramètre un tableau d'entiers dont les éléments sont 0 ou 1 et renvoie l'écriture décimale de cet entier positif\n",
     "    • Précondition :\n",
     "    - tab : un tableau d'entiers dont les éléments sont 0 ou 1\n",
     "    • Postcondition :\n",
@@ -867,7 +868,7 @@
     "def convertir(tab):\n",
     "    '''\n",
     "    • Définition :\n",
-    "    - Prend en entrée un tableau d'entiers dont les éléments sont 0 ou 1 et renvoie l'écriture décimale de cet entier positif de façon récursive\n",
+    "    - Prend en paramètre un tableau d'entiers dont les éléments sont 0 ou 1 et renvoie l'écriture décimale de cet entier positif de façon récursive\n",
     "    • Précondition :\n",
     "    - tab : un tableau d'entiers dont les éléments sont 0 ou 1\n",
     "    • Postcondition :\n",
@@ -951,7 +952,7 @@
     "def ajoute(cle:int, a):\n",
     "    '''\n",
     "    • Définition :\n",
-    "    - Prend en entrée une clé et un arbre binaire de recherche et renvoie un arbre binaire de recherche dans lequel cle a été insérée\n",
+    "    - Prend en paramètre une clé et un arbre binaire de recherche et renvoie un arbre binaire de recherche dans lequel cle a été insérée\n",
     "    • Préconditions :\n",
     "    - cle : une clé de type int\n",
     "    - a : un arbre binaire de recherche\n",
@@ -1012,7 +1013,7 @@
     "def recherche(a, tab:list)->int:\n",
     "    '''\n",
     "    • Définition :\n",
-    "    - Prend en entrée une varibale numérique a et un tableau et renvoie le nombre de fois que a apparaît dans tab\n",
+    "    - Prend en paramètre une varibale numérique a et un tableau et renvoie le nombre de fois que a apparaît dans tab\n",
     "    • Préconditions :\n",
     "    - a : une variable numérique float/int\n",
     "    - tab : un tableau de type list\n",
@@ -1072,7 +1073,7 @@
     "def recherche(elt:int, tab:list)->int:\n",
     "    '''\n",
     "    • Définition :\n",
-    "    - Prend en entrée une valeur numérique elt et un tableau tab et renvoie la première occurence de elt dans tab ou -1 si elt n'est pas dans tab\n",
+    "    - Prend en paramètre une valeur numérique elt et un tableau tab et renvoie la première occurence de elt dans tab ou -1 si elt n'est pas dans tab\n",
     "    • Préconditions :\n",
     "    - elt : une valeur numérique de type int\n",
     "    - tab : un tableau de type list\n",
@@ -1121,6 +1122,71 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#1\n",
+    "def mini(releve:float, date:int)->tuple:\n",
+    "    '''\n",
+    "    • Définition :\n",
+    "    - Prend en paramètre une liste \"releve\" d'éléments float et une liste \"date\" d'entiers et renvoie la plus petite valeur relevée au cours de la période et l’année correspondante\n",
+    "    • Préconditions :\n",
+    "    - releve : un tableau de float de type list\n",
+    "    - date : un tableau d'entier de type list\n",
+    "    • Postcondition :\n",
+    "    - La plus petite valeur relevée au cours de la période et l’année correspondante\n",
+    "    • Exemple :\n",
+    "    - t_moy = [14.9, 13.3, 13.1, 12.5, 13.0, 13.6, 13.7]\n",
+    "      annees = [2013, 2014, 2015, 2016, 2017, 2018, 2019]\n",
+    "      mini(t_moy, annees)\n",
+    "    > (12.5, 2016)\n",
+    "    '''\n",
+    "    \n",
+    "    assert releve == list(releve), \"releve doit être une list Python\"\n",
+    "    assert date == list(date), \"date doit être une list Python\"\n",
+    "\n",
+    "    mini = releve[0]\n",
+    "    indice_mini = 0\n",
+    "    for i in range(len(date)):\n",
+    "        if releve[i] < mini:\n",
+    "            mini = releve[i]\n",
+    "            indice_mini = i\n",
+    "    return (releve[indice_mini], date[indice_mini])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#2\n",
+    "def inverse_chaine(chaine):\n",
+    "    result = \"\"\n",
+    "    for caractere in chaine:\n",
+    "       result = caractere + result\n",
+    "    return result\n",
+    "\n",
+    "def est_palindrome(chaine):\n",
+    "    inverse = inverse_chaine(chaine)\n",
+    "    return chaine == inverse\n",
+    "    \n",
+    "def est_nbre_palindrome(nbre):\n",
+    "    chaine = str(nbre)\n",
+    "    return est_palindrome(chaine)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Sujet n°16 :"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -1135,6 +1201,154 @@
    "outputs": [],
    "source": [
     "#2\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Sujet n°44 :"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#1\n",
+    "def renverse(mot:str)->str:\n",
+    "    '''\n",
+    "    • Définition :\n",
+    "    - Prend en paramètre un mot et renvoie ce mot inversé\n",
+    "    • Précondition :\n",
+    "    - mot : une chaine de caractère\n",
+    "    • Postcondition :\n",
+    "    - Le mot inversé\n",
+    "    • Exemple :\n",
+    "    - renverse(\"informatique\")\n",
+    "    > \"euqitamrofni\"\n",
+    "    '''\n",
+    "    \n",
+    "    assert mot == str(mot), \"mot doit être une chaine de caractère\"\n",
+    "    \n",
+    "    reverse = \"\"\n",
+    "    for lettres in mot:\n",
+    "        reverse = lettres + reverse\n",
+    "    return reverse"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#2\n",
+    "def crible(n):\n",
+    "    \"\"\"\n",
+    "    Renvoie un tableau contenant tous les nombres premiers plus petits\n",
+    "    que n\n",
+    "    \"\"\"\n",
+    "    premiers = []\n",
+    "    tab = [True] * n\n",
+    "    tab[0], tab[1] = False, False\n",
+    "    for i in range(..., n):\n",
+    "        if tab[i] == ...:\n",
+    "            premiers.append(...)\n",
+    "            for multiple in range(2 * i, n, ...):\n",
+    "                tab[multiple] = ...\n",
+    "    return premiers\n",
+    "\n",
+    "\n",
+    "assert crible(40) == [2, 3, 5, 7, 11, 13, 17, 19, 23, 29, 31, 37]"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Sujet n°45 :"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#1\n",
+    "def rangement_valeurs(notes_eval:list)->list:\n",
+    "    '''\n",
+    "    • Définition :\n",
+    "    - Prend en paramètre une liste \"notes_eval\" d'éléments int et renvoie une liste de longueur 11 telle que la valeur de cette liste à chaque rang est égale au nombre de notes valant ce rang\n",
+    "    • Précondition :\n",
+    "    - notes_eval : une liste d'entier de type list\n",
+    "    • Postcondition :\n",
+    "    - Une liste de longueur 11 telle que la valeur de cette liste à chaque rang est égale au nombre de notes valant ce rang\n",
+    "    • Exemple :\n",
+    "    - rangement_valeurs([2, 0, 5, 9, 6, 9, 10, 5, 7, 9, 9, 5, 0, 9, 6, 5, 4])\n",
+    "    > [2, 0, 1, 0, 1, 4, 2, 1, 0, 5, 1]\n",
+    "    '''\n",
+    "    \n",
+    "    assert notes_eval == list(notes_eval), \"notes_eval doit être une list Python\"\n",
+    "\n",
+    "    note = [0]*11\n",
+    "    for i in notes_eval:\n",
+    "        note[i] += 1\n",
+    "    return note\n",
+    "\n",
+    "\n",
+    "def notes_triees(effectifs_notes:list)->list:\n",
+    "    '''\n",
+    "    • Définition :\n",
+    "    - Prend en paramètre la liste des effectifs des notes et renvoie une liste contenant la liste, triée dans l’ordre croissant, des notes des élèves\n",
+    "    • Précondition :\n",
+    "    - effectifs_notes : la liste des effectifs des notes\n",
+    "    • Postcondition :\n",
+    "    - Une liste contenant la liste triée dans l’ordre croissant, des notes des élèves\n",
+    "    • Exemple :\n",
+    "    -  notes_triees([2, 0, 1, 0, 1, 4, 2, 1, 0, 5, 1])\n",
+    "    > [0, 0, 2, 4, 5, 5, 5, 5, 6, 6, 7, 9, 9, 9, 9, 9, 10]\n",
+    "    '''\n",
+    "    \n",
+    "    assert effectifs_notes == list(effectifs_notes), \"effectifs_notes doit être une list Python\"\n",
+    "\n",
+    "    note = []\n",
+    "    for i in range(len(effectifs_notes)):\n",
+    "        if effectifs_notes[i] != 0:\n",
+    "            for j in range(effectifs_notes[i]):\n",
+    "                note.append(i)\n",
+    "    return note"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#2\n",
+    "def dec_to_bin (nb_dec):\n",
+    "    q, r = nb_dec // 2, nb_dec % 2\n",
+    "    if q == 0:\n",
+    "        return str(r)\n",
+    "    else:\n",
+    "        return dec_to_bin(q) + str(r)\n",
+    "\n",
+    "def bin_to_dec(nb_bin):\n",
+    "    if nb_bin == '0':\n",
+    "        return 0\n",
+    "    elif nb_bin == '1':\n",
+    "        return 1\n",
+    "    else:\n",
+    "        if nb_bin[-1] == '0':\n",
+    "            bit_droit = 0\n",
+    "        else:\n",
+    "            bit_droit = 1\n",
+    "        return 2 * bin_to_dec(nb_bin[:-1]) + bit_droit"
    ]
   }
  ],
