avancée Exercice_pratique au propre 18/45

--- a/docs/notebooks/Autre/Exercices/Exercice_pratique.ipynb
+++ b/docs/notebooks/Autre/Exercices/Exercice_pratique.ipynb
@@ -1208,6 +1208,66 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Sujet n°43:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#1\n",
+    "def ecriture_binaire_entier_positif(n:int)->list:\n",
+    "    '''\n",
+    "    • Définition :\n",
+    "    - Donne l'écriture binaire d'un entier positif\n",
+    "    • Précondition :\n",
+    "    - n : un entier positif\n",
+    "    • Postcondition :\n",
+    "    - Une liste correspondant à l'écriture binaire de n\n",
+    "    • Exemple :\n",
+    "    - ecriture_binaire_entier_positif(105)\n",
+    "    > [1, 1, 0, 1, 0, 0, 1]\n",
+    "    '''\n",
+    "\n",
+    "    assert n == int(n) and n >= 0, \"n doit être une nombre entier positif\"\n",
+    "\n",
+    "    binaire = []\n",
+    "    while n//2 != 0:\n",
+    "        binaire.append(n%2)\n",
+    "        n //= 2\n",
+    "    binaire.append(n%2)\n",
+    "    binaire.reverse()\n",
+    "    return binaire"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#2\n",
+    "def tri_bulles(T):\n",
+    "    '''\n",
+    "\tRenvoie le tableau T trié par ordre croissant\n",
+    "\t'''\n",
+    "    n = len(T)\n",
+    "    for i in range(n-1, 0, -1):\n",
+    "        for j in range(i):\n",
+    "            if T[j] > T[j+1]:\n",
+    "                temp = T[j]\n",
+    "                T[j] = T[j+1]\n",
+    "                T[j+1] = temp\n",
+    "    return T"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Sujet n°44 :"
    ]
   },
@@ -1241,7 +1301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1254,15 +1314,12 @@
     "    premiers = []\n",
     "    tab = [True] * n\n",
     "    tab[0], tab[1] = False, False\n",
-    "    for i in range(..., n):\n",
-    "        if tab[i] == ...:\n",
-    "            premiers.append(...)\n",
-    "            for multiple in range(2 * i, n, ...):\n",
-    "                tab[multiple] = ...\n",
-    "    return premiers\n",
-    "\n",
-    "\n",
-    "assert crible(40) == [2, 3, 5, 7, 11, 13, 17, 19, 23, 29, 31, 37]"
+    "    for i in range(2, n):\n",
+    "        if tab[i] == True:\n",
+    "            premiers.append(i)\n",
+    "            for multiple in range(2 * i, n, i):\n",
+    "                tab[multiple] = False\n",
+    "    return premiers"
    ]
   },
   {
