--- a/docs/notebooks/Autre/Exercices/Exercice_pratique.ipynb
+++ b/docs/notebooks/Autre/Exercices/Exercice_pratique.ipynb
@@ -1208,6 +1208,229 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Sujet n°40 :"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#1\n",
+    "def nombre_de_mots(phrase:str)->int:\n",
+    "    '''\n",
+    "    • Définition :\n",
+    "    - Donne le nombre de mot dans une phrase\n",
+    "    • Précondition :\n",
+    "    - phrase : une chaine de caractere\n",
+    "    • Postcondition :\n",
+    "    - Le nombre de mot dans phrase\n",
+    "    • Exemple :\n",
+    "    - nombre_de_mots('Cet exercice est simple.')\n",
+    "    > 4\n",
+    "    '''\n",
+    "\n",
+    "    assert phrase == str(phrase), \"phrase doit être une chaine de caractere\"\n",
+    "\n",
+    "    mot = 1\n",
+    "    for i in phrase:\n",
+    "        if i == \" \":\n",
+    "            mot += 1\n",
+    "    if \"!\" in phrase or \"?\" in phrase:\n",
+    "        mot -= 1\n",
+    "    return mot"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#2\n",
+    "class Noeud:\n",
+    "    def __init__(self, valeur):\n",
+    "        '''Méthode constructeur pour la classe Noeud.\n",
+    "        Paramètre d'entrée : valeur (str)'''\n",
+    "        self.valeur = valeur\n",
+    "        self.gauche = None\n",
+    "        self.droit = None\n",
+    "\n",
+    "    def getValeur(self):\n",
+    "        '''Méthode accesseur pour obtenir la valeur du noeud\n",
+    "        Aucun paramètre en entrée'''\n",
+    "        return self.valeur\n",
+    "\n",
+    "    def droitExiste(self):\n",
+    "        '''Méthode renvoyant True si l'enfant droit existe\n",
+    "        Aucun paramètre en entrée'''\n",
+    "        return (self.droit is not None)\n",
+    "\n",
+    "    def gaucheExiste(self):\n",
+    "        '''Méthode renvoyant True si l'enfant gauche existe\n",
+    "        Aucun paramètre en entrée'''\n",
+    "        return (self.gauche is not None)\n",
+    "\n",
+    "    def inserer(self, cle):\n",
+    "        '''Méthode d'insertion de clé dans un arbre binaire de recherche\n",
+    "        Paramètre d'entrée : cle (int)'''\n",
+    "        if cle < self.getValeur():\n",
+    "            # on insère à gauche\n",
+    "            if self.gaucheExiste():\n",
+    "                # on descend à gauche et on retente l'insertion de la clé\n",
+    "                self.gauche.inserer(cle)\n",
+    "            else:\n",
+    "                # on crée un fils gauche\n",
+    "                self.gauche = Noeud(cle)\n",
+    "        elif cle > self.getValeur() :\n",
+    "            # on insère à droite\n",
+    "            if self.droitExiste() :\n",
+    "                # on descend à droite et on retente l'insertion de la clé\n",
+    "                self.droit.inserer(cle)\n",
+    "            else:\n",
+    "                # on crée un fils droit\n",
+    "                self.droit = Noeud(cle)\n",
+    "\n",
+    "arbre = Noeud(7)\n",
+    "for cle in (3, 9, 1, 6):\n",
+    "    arbre.inserer(cle)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Sujet n°41 :"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#1\n",
+    "def recherche(caractere:str, chaine:str)->int:\n",
+    "    '''\n",
+    "    • Définition :\n",
+    "    - Donne le nombre d'occurence d'un caractere dans une chaine de caractere\n",
+    "    • Préconditions :\n",
+    "    - caractere : un chaine de caractere de taille 1\n",
+    "    - chaine : une chaine de caractere\n",
+    "    • Postcondition :\n",
+    "    - Le nombre d'occurence de caractere dans chaine\n",
+    "    • Exemple :\n",
+    "    - recherche('i', \"mississippi\")\n",
+    "    > 4\n",
+    "    '''\n",
+    "\n",
+    "    assert caractere == str(caractere) and len(caractere) == 1, \"caractere doit être une chaine de caractere de taille 1\"\n",
+    "    assert chaine == str(chaine), \"chaine doit être une chaine de caractere\"\n",
+    "\n",
+    "    occurence = 0\n",
+    "    for i in chaine:\n",
+    "        if i == caractere:\n",
+    "            occurence += 1\n",
+    "    return occurence"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#2\n",
+    "valeurs = [100,50,20,10,5,2,1]\n",
+    "\n",
+    "def rendu_glouton(a_rendre, rang):\n",
+    "    if a_rendre == 0:\n",
+    "        return []\n",
+    "    v = valeurs[rang]\n",
+    "    if v <= a_rendre:\n",
+    "        return [v] + rendu_glouton(a_rendre - v, rang)\n",
+    "    else :\n",
+    "        return rendu_glouton(a_rendre, rang+1)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Sujet n°42 :"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#1\n",
+    "def tri_selection(tab:list)->list:\n",
+    "    '''\n",
+    "    • Définition :\n",
+    "    - Tri une liste par ordre croissant sans créer de nouvelle liste\n",
+    "    • Précondition :\n",
+    "    - tab : une liste de type list\n",
+    "    • Postcondition :\n",
+    "    - La même liste triée par ordre croissant\n",
+    "    • Exemple :\n",
+    "    - tri_selection([1, 52, 6, -9, 12])\n",
+    "    > [-9, 1, 6, 12, 52]\n",
+    "    '''\n",
+    "\n",
+    "    assert tab == list(tab), \"tab doit être une list Python\"\n",
+    "\n",
+    "    for i in range (len(tab)):\n",
+    "        mini = tab[i]\n",
+    "        indice_mini = i\n",
+    "        for j in range(i, len(tab)):\n",
+    "            if tab[j]<mini:\n",
+    "                mini = tab[j]\n",
+    "                indice_mini = j\n",
+    "        element = tab[i]\n",
+    "        tab[i] = mini\n",
+    "        tab[indice_mini] = element\n",
+    "    return tab"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#2\n",
+    "from random import randint\n",
+    "\n",
+    "def plus_ou_moins():\n",
+    "    nb_mystere = randint(1, 99)\n",
+    "    nb_test = int(input(\"Proposez un nombre entre 1 et 99 : \"))\n",
+    "    compteur = 1\n",
+    "\n",
+    "    while nb_mystere != nb_test and compteur < 10:\n",
+    "        compteur = compteur + 1\n",
+    "        if nb_mystere >= nb_test:\n",
+    "            nb_test = int(input(\"Trop petit ! Testez encore : \"))\n",
+    "        else:\n",
+    "            nb_test = int(input(\"Trop grand ! Testez encore : \"))\n",
+    "\n",
+    "    if nb_mystere == nb_test:\n",
+    "        print(\"Bravo ! Le nombre etait \", nb_mystere)\n",
+    "        print(\"Nombre d'essais: \", nb_test)\n",
+    "    else:\n",
+    "        print(\"Perdu ! Le nombre etait \", nb_mystere)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Sujet n°43:"
    ]
   },
