--- a/docs/notebooks/Autre/Exercices/Exercice_pratique.ipynb
+++ b/docs/notebooks/Autre/Exercices/Exercice_pratique.ipynb
@@ -1208,6 +1208,160 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Sujet n°37 :"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#1\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#2\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Sujet n°38 :"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#1\n",
+    "def correspond(mot:str, mot_a_trous:str)->bool:\n",
+    "    '''\n",
+    "    • Définition :\n",
+    "    - Vérifie si un mot peu correspondre à un mot à trous\n",
+    "    • Précondition :\n",
+    "    - mot : une chaine de caractere constitué uniquement de majuscule sans espaces\n",
+    "    - mot_a_trous : une chaine de caractere constitué uniquement de majuscule et de \"*\" sans espaces\n",
+    "    • Postcondition :\n",
+    "    - Un booléen vérifiant si le mot peut correspondre au mot à trous\n",
+    "    • Exemple :\n",
+    "    - correspond('INFORMATIQUE', 'INFO*MA*IQUE')\n",
+    "    > True\n",
+    "    '''\n",
+    "\n",
+    "    assert mot == str(mot) and mot_a_trous == str(mot_a_trous), \"mot et mot_a_trous doivent être de type str\"\n",
+    "\n",
+    "    if len(mot) == len(mot_a_trous):\n",
+    "        correspond = True\n",
+    "        for i in range(len(mot_a_trous)):\n",
+    "            if mot_a_trous[i] != \"*\":\n",
+    "                if mot_a_trous[i] != mot[i]:\n",
+    "                    correspond = False\n",
+    "    else:\n",
+    "        correspond = False\n",
+    "    return correspond"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#2\n",
+    "def est_cyclique(plan):\n",
+    "    '''\n",
+    "    Prend en paramètre un dictionnaire `plan` correspondant à un plan d'envoi de messages (ici entre les personnes A, B, C, D, E, F).\n",
+    "    Renvoie True si le plan d'envoi de messages est cyclique et False sinon.\n",
+    "    '''\n",
+    "    expediteur = 'A'\n",
+    "    destinataire = plan[expediteur]\n",
+    "    nb_destinaires = 1\n",
+    "    \n",
+    "    while destinataire != expediteur:\n",
+    "        destinataire = plan[destinataire]\n",
+    "        nb_destinaires += 1\n",
+    "\n",
+    "    return nb_destinaires == len(plan)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Sujet n°39 :"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#1\n",
+    "def fibonacci(n:int)->int:\n",
+    "    '''\n",
+    "    • Définition :\n",
+    "    - Donne la suite de Fibonacci à un indice donné\n",
+    "    • Précondition :\n",
+    "    - n : un entier\n",
+    "    • Postcondition :\n",
+    "    - La suite de Fibonacci à l'indice n\n",
+    "    • Exemple :\n",
+    "    - fibonacci(25)\n",
+    "    > 75025\n",
+    "    '''\n",
+    "\n",
+    "    assert n == int(n) and n > 0, \"n doit être un entier strictement supérieur à 0\"\n",
+    "\n",
+    "    u0 = 1\n",
+    "    u1 = 1\n",
+    "    for i in range(n-2):\n",
+    "        u2 = u0 + u1\n",
+    "        u0 = u1\n",
+    "        u1 = u2\n",
+    "    return u1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#2\n",
+    "eleves_nsi = ['a','b','c','d','e','f','g','h','i','j']\n",
+    "notes_nsi = [30, 40, 80, 60, 58, 80, 75, 80, 60, 24]\n",
+    "\n",
+    "def pantheon(eleves, notes):\n",
+    "    note_maxi = 0\n",
+    "    meilleurs_eleves =  []\n",
+    "\n",
+    "    for i in range(len(notes)) :\n",
+    "        if notes[i] == note_maxi:\n",
+    "            meilleurs_eleves.append(eleves[i])\n",
+    "        elif notes[i] > note_maxi:\n",
+    "            note_maxi = notes[i]\n",
+    "            meilleurs_eleves = [eleves[i]]\n",
+    "\n",
+    "    return (note_maxi,meilleurs_eleves)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Sujet n°40 :"
    ]
   },
@@ -1653,7 +1807,7 @@
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "6823027d7e29b41a4e6f28161e95b4dfbe0e8b9a6a7278f50ef7cf75c6459dbe"
+    "hash": "9ac03a0a6051494cc606d484d27d20fce22fb7b4d169f583271e11d5ba46a56e"
    }
   }
  },
