--- a/docs/notebooks/Autre/Exercices/Exercice_pratique.ipynb
+++ b/docs/notebooks/Autre/Exercices/Exercice_pratique.ipynb
@@ -1217,7 +1217,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#1\n"
+    "#1\n",
+    "def recherche(elt, tab):\n",
+    "    derniere_ocu = -1\n",
+    "    for i in range(len(tab)):\n",
+    "        if tab[i] == elt:\n",
+    "            derniere_ocu = i\n",
+    "    return derniere_ocu"
    ]
   },
   {
