--- a/docs/notebooks/Autre/Exercices/Exercice_pratique.ipynb
+++ b/docs/notebooks/Autre/Exercices/Exercice_pratique.ipynb
@@ -1218,7 +1218,23 @@
    "outputs": [],
    "source": [
     "#1\n",
-    "def recherche(elt, tab):\n",
+    "def recherche(elt:int, tab:list)->int:\n",
+    "    '''\n",
+    "    • Définition :\n",
+    "    - Donne la dernière occurence d'un nombre dans un tableau ou -1 si il n'y est pas\n",
+    "    • Préconditions :\n",
+    "    - elt : un nombre\n",
+    "    - tab : un tableau de type list Python\n",
+    "    • Postcondition :\n",
+    "    - L'indice de la dernière occurence de elt dans tab ou -1 si il n'y est pas\n",
+    "    • Exemple :\n",
+    "    - recherche(1, [10, 12, 1, 56])\n",
+    "    > 2\n",
+    "    '''\n",
+    "\n",
+    "    assert elt == int(elt), \"elt doit être un nombre entier\"\n",
+    "    assert tab == list(tab), \"tab doit être un tableau de type list Python\"\n",
+    "    \n",
     "    derniere_ocu = -1\n",
     "    for i in range(len(tab)):\n",
     "        if tab[i] == elt:\n",
@@ -1228,11 +1244,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#2\n"
+    "#2\n",
+    "class AdresseIP:\n",
+    "\n",
+    "    def __init__(self, adresse):\n",
+    "        self.adresse = adresse\n",
+    "   \n",
+    "    def liste_octet(self):\n",
+    "        \"\"\"renvoie une liste de nombres entiers,\n",
+    "           la liste des octets de l'adresse IP\"\"\"\n",
+    "        return [int(i) for i in self.adresse.split(\".\")] \n",
+    "        \n",
+    "    def est_reservee(self):\n",
+    "        \"\"\"renvoie True si l'adresse IP est une adresse\n",
+    "           reservee, False sinon\"\"\"\n",
+    "        return self.adresse == \"192.168.0.0\" or self.adresse == \"192.168.0.255\"\n",
+    "             \n",
+    "    def adresse_suivante(self):\n",
+    "        \"\"\"renvoie un objet de AdresseIP avec l'adresse \n",
+    "           IP qui suit l'adresse self\n",
+    "           si elle existe et False sinon\"\"\"\n",
+    "        if self.liste_octet()[-1] < 254:\n",
+    "            octet_nouveau = self.liste_octet()[-1] + 1\n",
+    "            return AdresseIP('192.168.0.' + str(octet_nouveau))\n",
+    "        else:\n",
+    "            return False"
    ]
   },
   {
@@ -1254,7 +1294,7 @@
     "    '''\n",
     "    • Définition :\n",
     "    - Vérifie si un mot peu correspondre à un mot à trous\n",
-    "    • Précondition :\n",
+    "    • Préconditions :\n",
     "    - mot : une chaine de caractere constitué uniquement de majuscule sans espaces\n",
     "    - mot_a_trous : une chaine de caractere constitué uniquement de majuscule et de \"*\" sans espaces\n",
     "    • Postcondition :\n",
@@ -1813,7 +1853,7 @@
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "9ac03a0a6051494cc606d484d27d20fce22fb7b4d169f583271e11d5ba46a56e"
+    "hash": "6823027d7e29b41a4e6f28161e95b4dfbe0e8b9a6a7278f50ef7cf75c6459dbe"
    }
   }
  },
