--- a/docs/notebooks/Autre/Exercices/Exercice_pratique.ipynb
+++ b/docs/notebooks/Autre/Exercices/Exercice_pratique.ipynb
@@ -1187,11 +1187,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#1\n"
+    "#1\n",
+    "def recherche_indices_classement(elt:int, tab:list)->tuple:\n",
+    "    '''\n",
+    "    • Définition :\n",
+    "    - Donne les indices des nombres inferieur, égaux et supérieur à un nombre dans une liste\n",
+    "    • Préconditions :\n",
+    "    - elt : un nombre\n",
+    "    - tab : un tableau de type list Python\n",
+    "    • Postcondition :\n",
+    "    - Un tuple contenant trois liste des indices des éléments inferieur, égaux et supérieur à elt dans tab\n",
+    "    • Exemple :\n",
+    "    - recherche_indices_classement(3, [1, 3, 4, 2, 4, 6, 3, 0])\n",
+    "    > ([0, 3, 7], [1, 6], [2, 4, 5])\n",
+    "    '''\n",
+    "\n",
+    "    assert elt == int(elt), \"elt doit être un nombre entier\"\n",
+    "    assert tab == list(tab), \"tab doit être un tableau de type list Python\"\n",
+    "\n",
+    "    inferieur = []\n",
+    "    egal = []\n",
+    "    superieur = []\n",
+    "    for i in range(len(tab)):\n",
+    "        if tab[i] < elt:\n",
+    "            inferieur.append(i)\n",
+    "        elif tab[i] == elt:\n",
+    "            egal.append(i)\n",
+    "        else:\n",
+    "            superieur.append(i)\n",
+    "    return (inferieur, egal, superieur)"
    ]
   },
   {
