--- a/docs/notebooks/Autre/Memos/memo_Tri.ipynb
+++ b/docs/notebooks/Autre/Memos/memo_Tri.ipynb
@@ -22,6 +22,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "https://pixees.fr/informatiquelycee/n_site/nsi_prem_tri_algo.html"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "#### Les algorithmes de tri des éléments d'un tableau ont une place à part en algorithmique, les deux algorithmes les plus classiques sont :  \n",
     "#### - le tri par insertion\n",
     "#### - le tri par sélection."
@@ -160,7 +168,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.16"
+   "version": "3.8.16 (default, Jan 10 2023, 15:23:34) \n[GCC 9.4.0]"
   },
   "orig_nbformat": 4,
   "vscode": {
